# jpeg-collage

./: .gitignore  CMakeLists.txt  jpeg_lossless_trans.c  jpeg_lossless_trans.h  libjpeg_wrapper.h  libjpeg_wrapper_exif.c  libjpeg_wrapper_getters.h  main.c
libjpeg_wrapper/: CMakeLists.txt  libjpeg_wrapper.c  libjpeg_wrapper.h  libjpeg_wrapper_exif.h  libjpeg_wrapper_include.h  libjpeg_wrapper_markers.c  libjpeg_wrapper_markers.h
